--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Courier New', monospace;
     margin: 0;
     padding: 0;
-    background-image: linear-gradient(url); /* Színátmenetes háttér */
+    background-image: url(gibi2.png);
 }
 
 h1, h2, h3 {
