--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1 {
     margin-top: 50px;
     font-size: 60px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    text-align: center;
 }
 
 h2 {
@@ -29,6 +30,7 @@ h3 {
 p {
     color: #666; /* Szürke szöveg */
     line-height: 1.6;
+    text-align: center;
 }
 
 ul {
@@ -80,3 +82,7 @@ nav ul li a:hover {
     background-color: #555;
 }
 
+.kep{
+    height: auto;
+    width: auto;
+}
